# capstone-fromcampus2career

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/data-pipeline/: .env.example  package.json  pyproject.toml
apps/data-pipeline/src/: __init__.py  main.py  runner.py
apps/data-pipeline/src/config/: settings.py
apps/data-pipeline/src/contracts/: mapped_skill.py  normalized_job_posting.py  raw_job_posting.py  sdi_snapshot.py  skill_decay_signal.py
apps/data-pipeline/src/db/: __init__.py  app_event_repo.py  pipeline_job_repo.py  rejected_row_writer.py
apps/data-pipeline/src/ingestion/: deduplication.py  jobstreet_adapter.py  rejected_row.py  smoke_report.py  validator.py
apps/data-pipeline/src/intelligence/: __init__.py  alias_lookup.py  decay.py  role_requirement_aggregator.py  sdi.py  skill_mapper.py  skill_matching_guards.py
apps/data-pipeline/src/normalization/: __init__.py  role_hint_normalizer.py  skill_token_normalizer.py  text_cleaner.py  title_normalizer.py
apps/data-pipeline/src/publishing/: __init__.py  decay_publisher.py  evidence_summary_writer.py  role_requirement_publisher.py  sdi_publisher.py
apps/data-pipeline/src/tests/: test_monthly_publish.py  test_pipeline_orchestration.py  test_role_requirement_publish.py  test_runner.py  test_sdi_and_decay_publish.py
apps/data-pipeline/tests/ingestion/: test_deduplication.py  test_jobstreet_adapter.py  test_skill_matching_guards.py  test_validator.py
apps/data-pipeline/tests/intelligence/: test_decay_fixture.py
docs/: HLD.md  LLD.md  PRD.md  arch.md  (+2 more)
(+67 files in other folders)
